[package]
name = "node-carmen-core"
version = "0.1.0"
authors = ["Aarthy Chandrasekhar <kcaarthy@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "node_carmen_core"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.1"

[dependencies]
serde = "1.*"
failure = "0.1.5"
owning_ref = "0.4"
fixedbitset = "0.3.0"
carmen-core = { path = "../" }
fuzzy-phrase = { git = "https://github.com/ellenhp/fuzzy-phrase", rev = "0acd542f516b8003021e886c2302186591a7cf12" }
